[package]
name = "libp2p-perf"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#libp2p = { git = "https://github.com/kpp/rust-libp2p/", branch = "quic-attempt-4", features = ["quic"] }
libp2p = { git = "https://github.com/kpp/rust-libp2p/", branch = "libp2p-quic", features = ["async-std", "rsa", "quic", "noise", "tcp", "yamux", "dns", "plaintext"] }
#libp2p = { path = "/home/kpp/parity/rust-libp2p", features = ["async-std", "rsa", "quic", "noise", "tcp", "yamux", "dns", "plaintext"] }
futures_codec = "0.4"
futures = "0.3.1"
async-std = { version = "1.12.0", features = ["attributes"] }
bytes = "1.0.1"
structopt = "0.3"
tracing-subscriber = {version = "0.3.11", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.0"

# Include debugging symbols in release binary.
[profile.release]
debug = true
